# LinearRegression

./: LinearRegression.cabal
.stack-work/install/x86_64-linux-ncurses6/lts-8.5/8.0.2/flag-cache/: LinearRegression-0.1.0.0-Hh3n6xV11XeLxMGLEKIE24
.stack-work/install/x86_64-linux-ncurses6/lts-8.5/8.0.2/lib/x86_64-linux-ghc-8.0.2/LinearRegression-0.1.0.0-Hh3n6xV11XeLxMGLEKIE24/: Lib.dyn_hi
.stack-work/install/x86_64-linux-ncurses6/lts-8.5/8.0.2/pkgdb/: LinearRegression-0.1.0.0-Hh3n6xV11XeLxMGLEKIE24.conf  package.cache
app/: Main.hs  Train.hs
src/: Lib.hs
