name:                LinearRegression
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Antystenes/LinearRegression#readme
license:             BSD3
license-file:        LICENSE
author:              Morgoth
maintainer:          piotradwan@gmail.com
copyright:           2017 Morgoth
category:            MT
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , hashtables
                     , hmatrix
                     , random
                     , vector
                     , random
                     , process
  default-language:    Haskell2010

executable LinearRegression-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LinearRegression
  default-language:    Haskell2010

executable Train
  hs-source-dirs:      app
  main-is:             Train.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LinearRegression
  default-language:    Haskell2010

test-suite LinearRegression-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LinearRegression
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Antystenes/LinearRegression
